# seiko_controller_code

./: LICENSE  README.md
inria_controller/: CMakeLists.txt  package.xml  plugins.xml
inria_controller/config/: inria_controller.yaml
inria_controller/include/inria_controller/: ControllerBase.hpp  ControllerTalos.hpp  RhIOEigen.hpp  TaskBase.hpp  TaskBaseTalos.hpp  TaskSEIKO.hpp  ThreadManager.hpp
inria_controller/scripts/: startTalos.sh  stopTalos.sh
inria_controller/src/: ControllerBase.cpp  ControllerTalos.cpp  TaskBase.cpp  TaskSEIKO.cpp  ThreadManager.cpp
inria_maths/: CMakeLists.txt  package.xml
inria_maths/include/inria_maths/: Angle.h  AxisAngle.h  Clamp.h  Deadband.h  Euler.h  FilterDifferentiator2.hpp  FilterExponential.hpp  FilterExponentialRotation.hpp  FilterInterpolation.hpp  FilterPoseCommand.hpp  FilterVelCommand.hpp  IntegrateDOFVect.h  Polynomial.hpp  PoseCommandProcessing.hpp  Skew.h  TrajectoryBangBangAcc.hpp
inria_maths/src/: FilterPoseCommand.cpp  Polynomial.cpp  PoseCommandProcessing.cpp  TrajectoryBangBangAcc.cpp
inria_model/: CMakeLists.txt  package.xml
inria_model/include/inria_model/: Model.hpp  PinocchioInterface.hpp  RBDLRootUpdate.h  SEIKOController.hpp  SEIKORetargeting.hpp  SEIKOTalos.hpp  SEIKOWrapper.hpp  TalosDOFs.h
inria_model/src/: Model.cpp  PinocchioInterface.cpp  RBDLRootUpdate.cpp  SEIKOController.cpp  SEIKORetargeting.cpp  SEIKOTalos.cpp  SEIKOWrapper.cpp
inria_talos_description/: CMakeLists.txt  package.xml
inria_talos_description/urdf/: talos_stump.urdf
inria_utils/: CMakeLists.txt  package.xml
inria_utils/include/inria_utils/: BufferReaderWriter.hpp  CircularBuffer.hpp  Filesystem.h  Scheduling.h  TransportValueUDP.hpp
inria_utils/src/: Filesystem.cpp
