<?xml version="1.0"?>
<package format="2">
    <name>inria_controller</name>
    <version>0.0.0</version>
    <description>
        Main ROS control real time controller 
        for the Talos robot at INRIA Nancy
    </description>
    <maintainer email="quentin.rouxel@inria.fr">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>urdf</depend>
    <depend>rhio_common</depend>
    <depend>rhio_server</depend>
    <depend>inria_utils</depend>
    <depend>inria_maths</depend>
    <depend>inria_model</depend>

    <export>
        <controller_interface plugin="${prefix}/plugins.xml"/>
    </export>
</package>
