<?xml version="1.0"?>
<package format="2">
    <name>inria_maths</name>
    <version>0.0.0</version>
    <description>
        Various maths tools
    </description>
    <maintainer email="quentin.rouxel@inria.fr">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>inria_utils</depend>
</package>
