<?xml version="1.0"?>
<package format="2">
    <name>inria_talos_description</name>
    <version>0.0.0</version>
    <description>
        Customized model of Talos humanoid robot
    </description>
    <maintainer email="quentin.rouxel@inria.fr">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>

