<?xml version="1.0"?>
<package format="2">
    <name>inria_utils</name>
    <version>0.0.0</version>
    <description>
        Various utility tools
    </description>
    <maintainer email="quentin.rouxel@inria.fr">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospack</depend>
    <depend>roscpp</depend>
</package>
